Add improved journaling app with prompts and mood tracking

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "vanilla-react-journal-app",
+  "name": "improved-react-journal-app",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "5.0.1",
+    "framer-motion": "^10.12.16"
   },
   "scripts": {
     "start": "react-scripts start",
