--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "improved-react-journal-app",
+  "name": "healing-journal-vanilla",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
